// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="trending-tags-card"
>
  <h2
    className="list-header"
  >
    Topics
  </h2>
  <div
    className="flex"
  >
    <a
      className="tag-list-item flex items-center"
      href="/hot/art"
      onClick={[Function]}
      title="Unmoderated topics"
    >
      art
    </a>
  </div>
  <div
    className="flex"
  >
    <a
      className="tag-list-item flex items-center"
      href="/hot/hive"
      onClick={[Function]}
      title="Unmoderated topics"
    >
      hive
    </a>
  </div>
  <div
    className="flex"
  >
    <a
      className="tag-list-item flex items-center"
      href="/hot/news"
      onClick={[Function]}
      title="Unmoderated topics"
    >
      news
    </a>
  </div>
</div>
`;

exports[`(2) Selected tag 1`] = `
<div
  className="trending-tags-card"
>
  <h2
    className="list-header"
  >
    Topics
  </h2>
  <div
    className="flex"
  >
    <a
      className="tag-list-item flex items-center"
      href="/hot/art"
      onClick={[Function]}
      title="Unmoderated topics"
    >
      art
    </a>
  </div>
  <div
    className="flex"
  >
    <a
      className="tag-list-item selected-item flex items-center"
      href="/hot/hive"
      onClick={[Function]}
      title="Unmoderated topics"
    >
      hive
      <div
        className="text-gray-600 dark:text-gray-400 ml-2 pointer"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.41,12l6.3-6.29a1,1,0,1,0-1.42-1.42L12,10.59,5.71,4.29A1,1,0,0,0,4.29,5.71L10.59,12l-6.3,6.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0L12,13.41l6.29,6.3a1,1,0,0,0,1.42,0,1,1,0,0,0,0-1.42Z"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    className="flex"
  >
    <a
      className="tag-list-item flex items-center"
      href="/hot/news"
      onClick={[Function]}
      title="Unmoderated topics"
    >
      news
    </a>
  </div>
</div>
`;
